# sdl_base

./: .editorconfig  CMakeLists.txt  LICENSE.txt  README.md  vcpkg-configuration.json  vcpkg.json
asset/graphic/: hsnr64.xcf
asset/map/: rofl.json
src/example/: global.hpp  main.cpp  mini.cpp  mini.hpp  pong.cpp  smartptrtest.cpp
src/example/game/: camerastate.cpp  example_game.cpp  example_game.hpp  introstate.cpp  plasmastate.cpp  roflstate.cpp  roflstate.hpp  shooterstate.cpp  simpleeditor.cpp  simpleeditor.hpp  sortstate.cpp
src/hsnr64/: README.md  offset.hpp  palette.hpp  tilefont.cpp  tilefont.hpp
src/sor/: adapt_sdl_imgui.hpp  adapt_sdl_nfd.cpp  adapt_sdl_nfd.hpp  core.hpp  math.hpp  sdl_core.cpp  sdl_core.hpp  sdl_game.cpp  sdl_game.hpp  sdl_math.hpp  sdl_shapeops.hpp  sdl_smartptr.hpp  smartptr.hpp
